Changes for 1.8.1

 - [ZBX-1420] fixed warnings in Dashboard and on script execution if Zabbix server is down (Alexei)
 - [ZBX-1584] fixed importing\exporting of ipmi settings (Vedmak)
 - [ZBX-1554] fixed errors when save triggers using "Create log trigger" (Vedmak)
 - [ZBX-1530] fixed showing graph from wrong host, when simple with dynamic item is clicked on screen (Vedmak)
 - [ZBX-1545] fixed showing templated graphs in graph selection combobox (Vedmak)
 - [ZBX-1465] fixed adding hostgroup elements on map (Aly)
 - [ZBX-1528] fixed map permissions (Aly)
 - [ZBX-1569] fix incorrect state reference in map connector definition (Richlv)
 - [ZBX-1568] make 'Parent service' string translatable; patch by Kodai (Richlv)
 - [ZBX-1457] hosts in export file is now sorted by hostname (Vedmak)
 - [ZBX-1462] fixed "Add host" operation for "Discovery" module for trying to add a host name which is already used (Dmitry)
 - [ZBX-1547] fixed SQL error while executing discovery action 'remove host' (Sasha)
 - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (Richlv)
 - [ZBX-1470] fixed importing triggers with dependencies (Vedmak)
 - [ZBX-1440] fixed error when adding global macro (Vedmak)
 - [ZBX-1435] fixed exporting triggers with '&' (Vedmak)
 - [ZBX-1459] fixed template importing (Vedmak)
 - [ZBX-1174] fixed sql in "Add host" operation in "Discovery" module (Dmitry)
 - [ZBX-1431] fixed parameters for user.get api method (Vedmak)
 - [ZBX-1467] fixed graph copying (Vedmak)
 - [ZBX-1502] fixed full clone of hosts (Vedmak)
 - [ZBX-1460] forbade creation of circular template linkages (Vedmak)
 - [ZBX-1441] fixed incorrectly remembered link line type (Vedmak)
 - [ZBX-1498] fixed error when try to create item with custom key "log" and not Log item type (Vedmak)
 - [ZBX-1497] fixed evaluation of trigger function 'count' (Sasha)
 - [ZBX-1283] fixed group selection in maintenance edit form (Vedmak)