@@ -357,6 +357,14 @@ int	main(int argc, char **argv)
 {
 	ZBX_TASK_EX	t;
 
+#if defined (_WINDOWS)
+	/* Provide, so our process handles errors instead of the system itself. */
+	/* Attention!!! */
+	/* The system does not display the critical-error-handler message box. */
+	/* Instead, the system sends the error to the calling process.*/
+	SetErrorMode(SEM_FAILCRITICALERRORS);
+#endif /* _WINDOWS */	
+	
 	memset(&t, 0, sizeof(t));
 	t.task = ZBX_TASK_START;
 
