@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1286] Zabbix handles some specified types of errors instead of Windows system, no dialog boxes pop up (Dmitry)
  - [ZBX-1420] fixed warnings in Dashboard and on script execution if Zabbix server is down (Alexei)
  - [ZBX-1584] fixed importing\exporting of ipmi settings (Vedmak)
  - [ZBX-1554] fixed errors when save triggers using "Create log trigger" (Vedmak)
